hphp/hack/test/typecheck/bogus_escape.php.exp
File "bogus_escape.php", line 4, characters 8-18:
Malformed string literal <<\u{1000 k>> (Parsing[1002])
